--- a/index.html
+++ b/index.html
@@ -123,27 +123,27 @@
                     <h2 class="panel-title">Single Player</h2>
                     <!-- /.panel-title -->
 
-                    <form action="/game/">
+                    <form action="/game">
                         <div class="form-group row">
                             <label for="numPlayers" class="col-sm-6 col-form-label">Number of players</label>
                             <div class="col-sm-6">
-                                <input type="number" class="form-control" id="numPlayers" value="2">
+                                <input type="number" class="form-control" id="numPlayers" name="numPlayers" value="2">
                             </div>
                         </div>
                         <div class="form-group row">
                             <label for="boardSize" class="col-sm-6 col-form-label">Board size</label>
                             <div class="col-sm-6">
-                                <select class="form-control" id="boardSize">
-                                    <option>3x3</option>
-                                    <option>5x5</option>
-                                    <option>7x7</option>
+                                <select class="form-control" id="boardSize" name="boardSize">
+                                    <option value="3">3x3</option>
+                                    <option value="5">5x5</option>
+                                    <option value="7">7x7</option>
                                 </select>
                             </div>
                         </div>
                         <div class="form-group row">
                             <label for="placeAnywhere" class="col-sm-6 col-form-label">Place anywhere</label>
                             <div class="col-sm-6">
-                                <select class="form-control" id="placeAnywhere">
+                                <select class="form-control" id="placeAnywhere" name="placeAnywhere">
                                     <option>No</option>
                                     <option>Yes</option>
                                 </select>
@@ -173,7 +173,7 @@
 
                     <div class="panel-content">Are you ready?</div>
 
-                    <a href="/game/" class="btn btn-primary mt-2">Play T^3</a>
+                    <a href="/game?ai=true" class="btn btn-primary mt-2">Play T^3</a>
 
                 </div>
                 <!-- /.panel -->
@@ -185,11 +185,11 @@
 
                     <div class="panel-content">Please select a room to join</div>
 
-                    <form action="/game/">
+                    <form action="/game">
                         <div class="form-group row">
                             <label for="roomName" class="col-sm-6 col-form-label">Room Name</label>
                             <div class="col-sm-6">
-                                <input type="text" class="form-control" id="roomName" placeholder="room name">
+                                <input type="text" class="form-control" name="roomName" id="roomName" placeholder="room name">
                             </div>
                         </div>
                         <button type="submit" class="btn btn-primary mt-2">Play T^3</button>
@@ -204,35 +204,35 @@
 
                     <div class="panel-content">Please create the room below.</div>
 
-                    <form action="/game/">
+                    <form action="/game">
                         <div class="form-group row">
                             <label for="roomName" class="col-sm-6 col-form-label">Room Name</label>
                             <div class="col-sm-6">
-                                <input type="text" class="form-control" id="roomName" placeholder="room name">
+                                <input type="text" class="form-control" name="roomName" id="roomName" placeholder="room name">
                             </div>
                         </div>
                         <div class="form-group row">
                             <label for="numPlayers" class="col-sm-6 col-form-label">Number of players</label>
                             <div class="col-sm-6">
-                                <input type="number" class="form-control" id="numPlayers" value="2">
+                                <input type="number" class="form-control" name="numPlayers" id="numPlayers" value="2">
                             </div>
                         </div>
                         <div class="form-group row">
                             <label for="boardSize" class="col-sm-6 col-form-label">Board size</label>
                             <div class="col-sm-6">
-                                <select class="form-control" id="boardSize">
-                                    <option>3x3</option>
-                                    <option>5x5</option>
-                                    <option>7x7</option>
+                                <select class="form-control" id="boardSize" name="boardSize">
+                                    <option value="3">3x3</option>
+                                    <option value="5">5x5</option>
+                                    <option value="7">7x7</option>
                                 </select>
                             </div>
                         </div>
                         <div class="form-group row">
                             <label for="placeAnywhere" class="col-sm-6 col-form-label">Place anywhere</label>
                             <div class="col-sm-6">
-                                <select class="form-control" id="placeAnywhere">
-                                    <option>No</option>
-                                    <option>Yes</option>
+                                <select class="form-control" id="placeAnywhere" name="placeAnywhere">
+                                    <option value="no">No</option>
+                                    <option value="yes">Yes</option>
                                 </select>
                             </div>
                         </div>
