--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
     <title>game</title>
     <script src="dist/game.min.js"></script>
     <link rel="stylesheet" type="text/css" href="dev/style.css">
-    <script src="three.min.js"></script>
+    <script src="lib/three.min.js"></script>
     <meta charset="utf8"/>
     <script>
     "use strict"
