--- a/gameVR.html
+++ b/gameVR.html
@@ -29,8 +29,15 @@
     #enterVRButton.small {
         transform: scale(0.7);
     }
+    #tempCursor {
+        height: 5px;
+        width: 5px;
+        background-color: red;
+        position: absolute;
+    }
 </style>
 <body>
     <div id="enterVRButton"></div>
+    <div id="tempCursor"></div>
 </body>
 </html>
