changed http port to 1338 and added missing VR <script> import

--- a/gameVR.html
+++ b/gameVR.html
@@ -8,6 +8,7 @@
     <script src="lib/VREffect.js"></script>
     <script src="lib/StereoEffect.js"></script>
     <script src="lib/OrbitControls.js"></script>
+    <script src="lib/VRControls.js"></script>
     <script src="dist/scriptVR.min.js"></script>
 </head>
 <style>
