--- a/gameVR.html
+++ b/gameVR.html
@@ -36,9 +36,14 @@
         background-color: red;
         position: absolute;
     }
+  #winPannel {
+    display: none;
+    text-align: center;
+  }
 </style>
 <body>
     <div id="enterVRButton"></div>
+  <div id="winPanel"> </div>
     <div id="tempCursor"></div>
 </body>
 </html>
