bens sloppy gauth imp

--- a/game2d.html
+++ b/game2d.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/css/style.min.css">
     <meta charset="utf8"/>
     <script src="lib/three.min.js"></script>
+    <script src="dist/auth.min.js"></script>
     <script src="dist/game.min.js"></script>
     <script src="dist/script2D.min.js"></script>
 
