--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     })
     </script>
 
-    <script src="dist/auth.js"></script>
+    <script src="dev/auth.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <meta name="google-signin-client_id" content="511406985315-0at5rv65cdkq7r2vkivi9koa3l2vai05.apps.googleusercontent.com">
 </head>
