--- a/index.html
+++ b/index.html
@@ -128,15 +128,15 @@
 
                     <form action="/game">
                         <div class="form-group row">
-                            <label for="numPlayers" class="col-sm-6 col-form-label">Number of players</label>
+                            <label for="p" class="col-sm-6 col-form-label">Number of players</label>
                             <div class="col-sm-6">
-                                <input type="number" class="form-control" id="numPlayers" name="numPlayers" value="2">
+                                <input type="number" class="form-control" id="p" name="p" value="2">
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="boardSize" class="col-sm-6 col-form-label">Board size</label>
+                            <label for="span" class="col-sm-6 col-form-label">Board size</label>
                             <div class="col-sm-6">
-                                <select class="form-control" id="boardSize" name="boardSize">
+                                <select class="form-control" id="span" name="span">
                                     <option value="3">3x3</option>
                                     <option value="5">5x5</option>
                                     <option value="7">7x7</option>
@@ -144,11 +144,11 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="placeAnywhere" class="col-sm-6 col-form-label">Place anywhere</label>
+                            <label for="g" class="col-sm-6 col-form-label">Place anywhere</label>
                             <div class="col-sm-6">
-                                <select class="form-control" id="placeAnywhere" name="placeAnywhere">
-                                    <option>No</option>
-                                    <option>Yes</option>
+                                <select class="form-control" id="g" name="g">
+                                    <option value="0">No</option>
+                                    <option value="1">Yes</option>
                                 </select>
                             </div>
                         </div>
